--- a/index.html
+++ b/index.html
@@ -1,16 +1,160 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Stellar by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Sofia Muzio - web developer</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>SM Dev</title>
-</head>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-<body>
-    <h1>Developer</h1>
-</body>
+				<!-- Header -->
+					<header id="header" class="alt">
+						<!--<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
+						<h1>Sofia Muzio</h1>
+						<p>Developer</p>
+					</header>
 
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="#intro" class="active">About me</a></li>
+							<li><a href="#first">Skills</a></li>
+							<li><a href="#second">Experience</a></li>
+							<li><a href="#footer">Contact</a></li>
+						</ul>
+					</nav>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- About me -->
+							<section id="intro" class="main">
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>Specialized in web front-end</h2>
+										</header>
+										<p>I am developer with excellent cmmunication skills, as well as a deep understanding of the digital market and 
+											great initiative in learning new
+											technologies.</p>
+										<p>I have been working in the development area since 2017 and I have great recommendations from all the comanys that I have worked for.</p>
+										<ul class="actions">
+											<li><a href="generic.html" class="button">Learn More</a></li>
+										</ul>
+									</div>
+									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+								</div>
+							</section>
+
+						<!-- First Section -->
+							<section id="first" class="main special">
+								<header class="major">
+									<h2>Skills</h2>
+								</header>
+								<ul class="features">
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>CODE</h3>
+										<p>Programming and markup languages:<br>HTML- CSS - Scss - JS<br>Libraries:<br>Bootstrap - jQuery
+										<br>CMS:<br>Hybris SAP - Target - Adobe - Drupal</p>
+										<p></p>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>Lenguages</h3>
+										<p>Spanish native<br>English fluent</p>
+									</li>
+									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>Design</h3>
+										<p>Knowledge of Photoshop and Illustrator</p>
+									</li>
+								</ul>
+								<!--
+								<footer class="major">
+									<ul class="actions special">
+										<li><a href="#" class="button">Learn More</a></li>
+									</ul>
+								</footer>-->
+							</section>
+
+						<!-- Second Section -->
+							<section id="second" class="main special">
+								<header class="major">
+									<h2>Experience</h2>
+									<p>My work career</p>
+								</header>
+								<ul class="statistics">
+									<li class="style2">
+										<strong>WUNDERMAN</strong><br>APRIL 2017 TO DEC 2018<br>
+										Develop and migrate pages for the sites of brands Ford and Colgate.<br>
+										Troubleshoot old coding problems.<br>
+										Content editions.<br>
+										CMS: Adobe<br>
+										HTML, CSS, JS -
+										GIT<br>
+										References: Tech Lead Mariano Magallon
+										mariano.magallon@wunderman.com
+									</li>
+									<li class="style4">
+										<strong>LENOVO</strong><br>DEC 2018 to MARCH 2022<br>
+										Maintance of Lenovo E-commerce website for LATAM<br>
+										Creation of documentation for new process on the CMS system<br>
+										CMS: Hybris SAP, Target from Adobe and Drupal<br>
+										HTML, CSS, JS, Velocity<br>
+										References: Proyect Manager Adriana Tieso atieso@lenovo.com<br>
+										team leader Nicolas Deyros ndeyros@lenovo.com
+									</li>
+								</ul>
+								<p>I have also participated in <a href="https://growithjane.com/">Grow with Jane</a> mobile app as a collaborator developer. This was my first approach to mobile development using Flutter.
+								<br>References: Senior developer Roque Terrani riterrani@gmail.com</p>
+							</section>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<section>
+							<h2>Get in touch</h2>
+							<p>If you are interested in my work please reach out using any of these methods, although I always prefer mail.</p>
+							
+						</section>
+						<section>
+							<h2>Personal information</h2>
+							<dl class="alt">
+								<dt>Address</dt>
+								<dd>Barcelona, Catalunya &bull; Spain</dd>
+								<dt>Phone</dt>
+								<dd>0034 664259670</dd>
+								<dt>Email</dt>
+								<dd><a href="mailto:sofiammuzio@gmail.com">sofiammuzio@gmail.com</a></dd>
+							</dl>
+							<ul class="icons">
+								<a href="https://www.linkedin.com/in/sofia-muzio/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+							</ul>
+						</section>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
