--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Lenguages</h3>
+										<h3>Languages</h3>
 										<p>Spanish native<br>English fluent</p>
 									</li>
 									<li>
