--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 										<header class="major">
 											<h2>Specialized in web front-end</h2>
 										</header>
-										<p>I am developer with excellent cmmunication skills, as well as a deep understanding of the digital market and 
+										<p>I am developer with excellent communication skills, as well as a deep understanding of the digital market and 
 											great initiative in learning new
 											technologies.</p>
-										<p>I have been working in the development area since 2017 and I have great recommendations from all the comanys that I have worked for.</p>
+										<p>I have been working in the development area since 2017 and I have great recommendations from all the companies that I have worked for.</p>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
@@ -69,7 +69,7 @@
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Design</h3>
-										<p>Knowledge of Photoshop and Illustrator</p>
+										<p>Photoshop and Illustrator</p>
 									</li>
 								</ul>
 								<!--
