--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>CODE</h3>
 										<p>Programming and markup languages:<br>HTML- CSS - Scss - JS<br>Libraries:<br>Bootstrap - jQuery
-										<br>CMS:<br>Hybris SAP - Target - Adobe - Drupal</p>
+										<br>CMS:<br>Hybris SAP - Target - Adobe - Drupal - Wordpress</p>
 										<p></p>
 									</li>
 									<li>
