--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<ul class="statistics">
 									<li class="style2">
 										<strong>WUNDERMAN</strong><br>APRIL 2017 TO DEC 2018<br>
-										Develop and migrate pages for the sites of brands Ford and Colgate.<br>
+										Development and migration of pages for Colgate and Ford websites<br>
 										Troubleshoot old coding problems.<br>
 										Content editions.<br>
 										CMS: Adobe<br>
@@ -99,7 +99,7 @@
 									</li>
 									<li class="style4">
 										<strong>LENOVO</strong><br>DEC 2018 to MARCH 2022<br>
-										Maintance of Lenovo E-commerce website for LATAM<br>
+										Maintenance of Lenovo E-commerce website for LATAM<br>
 										Creation of documentation for new process on the CMS system<br>
 										CMS: Hybris SAP, Target from Adobe and Drupal<br>
 										HTML, CSS, JS, Velocity<br>
