--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Specialized in web front-end</h2>
+											<h2>Developer specialized in web front-end</h2>
 										</header>
-										<p>I am developer with excellent communication skills, as well as a deep understanding of the digital market and 
+										<p>I am a developer with excellent communication skills, as well as a deep understanding of the digital market and 
 											great initiative in learning new
 											technologies.</p>
 										<p>I have been working in the development area since 2017 and I have great recommendations from all the companies that I have worked for.</p>
@@ -89,8 +89,8 @@
 									<li class="style2">
 										<strong>WUNDERMAN</strong><br>APRIL 2017 TO DEC 2018<br>
 										Development and migration of pages for Colgate and Ford websites<br>
-										Troubleshoot old coding problems.<br>
-										Content editions.<br>
+										Troubleshoot old coding problems<br>
+										Content editions<br>
 										CMS: Adobe<br>
 										HTML, CSS, JS -
 										GIT<br>
