--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>CODE</h3>
-										<p>Programming and markup languages:<br>HTML- CSS - Scss - JS<br>Libraries:<br>Bootstrap - jQuery
-										<br>CMS:<br>Hybris SAP - Target - Adobe - Drupal - Wordpress</p>
+										<p>Programming and markup languages:<br>HTML- CSS - Scss - JS - Dart<br>Libraries:<br>Bootstrap - jQuery -ReactJs
+										<br>Frameworks<br>VueJS - FLUTTER<br>
+											<br>CMS:<br>Hybris SAP - Target - Adobe - Drupal - Wordpress</p>
 										<p></p>
 									</li>
 									<li>
