--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 											<h2>Developer specialized in web front-end</h2>
 										</header>
 										<p>I am a developer with excellent communication skills, as well as a deep understanding of the digital market and 
-											great initiative in learning new
+											 initiative in learning new
 											technologies.</p>
 										<p>I have been working in the development area since 2017 and I have great recommendations from all the companies that I have worked for.</p>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/pic.jpg" alt="" /></span>
 								</div>
 							</section>
 
