--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>CODE</h3>
 										<p>Programming and markup languages:<br>HTML- CSS - Scss - JS - Dart<br>Libraries:<br>Bootstrap - jQuery -ReactJs
-										<br>Frameworks<br>VueJS - FLUTTER<br>
-											<br>CMS:<br>Hybris SAP - Target - Adobe - Drupal - Wordpress</p>
+										<br>Frameworks<br>VueJS - FLUTTER<br>API platform: POSTMAN<br>
+											<br>CMS:<br>Hybris SAP - Target - Adobe - Prestashop - Wordpress</p>
 										<p></p>
 									</li>
 									<li>
@@ -70,7 +70,7 @@
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Design</h3>
-										<p>Photoshop and Illustrator</p>
+										<p>Photoshop<br>Illustrator<br>Figma<br>Sketch</p>
 									</li>
 								</ul>
 								<!--
