--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										References: Tech Lead Mariano Magallon
 										mariano.magallon@wunderman.com
 									</li>
-									<li class="style4">
+									<li class="style3">
 										<strong>LENOVO</strong><br>DEC 2018 to MARCH 2022<br>
 										Maintenance of Lenovo E-commerce website for LATAM<br>
 										Creation of documentation for new process on the CMS system<br>
@@ -106,6 +106,15 @@
 										HTML, CSS, JS, Velocity<br>
 										References: Proyect Manager Adriana Tieso atieso@lenovo.com<br>
 										team leader Nicolas Deyros ndeyros@lenovo.com
+									</li>
+									<li class="style4">
+										<strong>FIVE IS BLUE</strong><br>SEP 2022 to JUN 2023<br>
+										Maintenance of E-commerce websites for
+diferent clients<br>
+Creation of e-commers and informational sites
+from scratch in Wordpress / Prestashop- full
+themes and plugins<br>
+PHP - JavaScript - ReactJS- HTML - CSS
 									</li>
 								</ul>
 								<p>I have also participated in <a href="https://growithjane.com/">Grow with Jane</a> mobile app as a collaborator developer. This was my first approach to mobile development using Flutter.
